Weak references
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>